archived/openclaw/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openclaw-route
  namespace: openclaw
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: crobceratops-gateway
      namespace: gateways
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: crobasaurusrex-gateway
      namespace: gateways
  hostnames:
    - openclaw.crobceratops.ryanbeales.com
    - openclaw.crobasaurusrex.ryanbeales.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: openclaw
          port: 18789
          weight: 1
